[metadata]
name = qiskit-qasm3-import
version = attr:qiskit_qasm3_import.__version__
url = https://github.com/Qiskit/qiskit-qasm3-import
description = Importer for parsing OpenQASM 3 strings into Qiskit circuits
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
license = Apache 2.0 License
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/Qiskit/qiskit-qasm3-import/issues
    Documentation = https://qiskit.github.io/qiskit-qasm3-import
    Source Code = https://github.com/Qiskit/qiskit-qasm3-import
author = Jake Lishman

[options]
packages = find:
package_dir =
    = src
install_requires =
    qiskit>=0.37.0
    openqasm3[parser]>=0.4,<0.6

[options.packages.find]
where = src/

[options.extras_require]
; This is a dummy option for now, just added for consistency, and in case we
; want to add more extras in the future.
all =
